# fae

./: .gitignore  .mcp.json  .mise.toml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  Makefile  README.md  README_LITERAL_SEARCH.md  RUST_REWRITE_ROADMAP.md  TUI_ARCHITECTURE_REDESIGN.md  debug_test.txt  memory_efficient_design.md  package-lock.json  package.json  project-memory.json  simple_test.py  test_fail_safe.py  test_notify.rs  test_stdio.sh  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: coverage.yml  test.yml
backup_20250614_011203/: Cargo.toml  LICENSE
backup_20250614_011203/docs/: ARCHITECTURE.md
backup_20250614_011203/src/: cache_manager.rs  lib.rs  main.rs  types.rs
backup_20250614_011203/src/cli/: mod.rs  search_runner.rs  search_strategy.rs
backup_20250614_011203/src/cli/strategies/: file_strategy.rs  regex_strategy.rs
backup_20250614_011203/src/display/: display_formatter.rs  symbol_formatters.rs  tui_formatter.rs
backup_20250614_011203/src/languages/: javascript.rs  python.rs  rust_lang.rs
backup_20250614_011203/src/searchers/: content_search.rs  file_search.rs  regex_searcher.rs
backup_20250614_011203/src/searchers/backend/: ag_backend.rs  mod.rs  ripgrep_backend.rs
backup_20250614_011203/src/tui/: constants.rs  input_handler.rs  text_editing.rs
backup_20250614_011203/src/workers/: content_search_worker.rs  message.rs  mod.rs  simple_tui.rs  worker.rs
backup_20250614_011203/tests/: comprehensive_error_handling_test.rs  current_state_test.rs  e2e_workflow_test.rs  filesystem_permissions_test.rs  performance_regression_test.rs  search_runner_extension_test.rs  tui_integration_test.rs  tui_test.rs  utf8_edge_cases_test.rs
benches/: indexing_performance.rs  search_performance.rs
docs/: TREE_SITTER_LANGUAGES.md
examples/: actor_tui_demo.rs  ag_search.rs  basic_search.rs  filepath_search.rs  jsonrpc_stdio_example.rs  native_search.rs  ripgrep_search.rs  search_comparison.rs  search_modes.rs  smart_search.rs  test_client.py
samples/: README.md  simple_echo_test.rs  test_content_search_worker.rs  test_router_integration.rs  test_search_interruption.rs  test_search_router.rs  test_simple_echo.rs
sfs_backup_20250612_082348/: CONTRIBUTING.md  TUI_ARCHITECTURE_REDESIGN.md
sfs_backup_20250612_082348/benches/: search_performance.rs
src/: backend.rs  cache_manager.rs  cli.rs  cli.ts  display.rs  file_watcher.rs  index_manager.rs  indexer.rs  indexer.ts  interactive.ts  jsonrpc.rs  jsonrpc_base.rs  lib.rs  main.rs  peco-interface.ts  realtime_indexer.rs  search_coordinator.rs  searcher.rs  searcher.ts  symbol_index.rs  tree-sitter-indexer.ts  tree_sitter.rs  tui.rs  tui_simulator.rs  tui_state.rs  types.rs  types.ts  unified_search.rs
src/actor/: mod.rs  (+1 more)
tests/: cache_test.rs  channel_communication_test.rs  cli_regression_test.rs  cli_test.rs  content_search_integration_test.rs  content_search_test.rs  debug_tree_sitter.rs  deduplication_test.rs  error_handling_test.rs  file_watching_test.rs  gitignore_test.rs  highlight_test.rs  indexer_test.rs  integration_test.rs  jsonrpc_engine_pinning_test.rs  jsonrpc_sender_pinning_test.rs  literal_search_integration_test.rs  notification_forwarding_fixed_test.rs  notification_forwarding_test.rs  performance_regression_test.rs  performance_test.rs  platform_test.rs  progressive_indexing_test.rs  real_world_scenarios_test.rs  realtime_indexer_advanced_test.rs  resource_limits_test.rs  search_during_indexing_test.rs  searcher_test.rs  security_test.rs  tree_sitter_failure_test.rs  tree_sitter_integration_test.rs  tui_app_integration_tests.rs  tui_architecture_test.rs  tui_handler_tests.rs  tui_integration_test.rs  tui_simulation_test.rs  tui_test.rs  types_test.rs  worker_integration_test.rs
(+128 files in other folders)
