[package]
name = "fae"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies actually used
async-trait = "0.1"
log = "0.4"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
walkdir = "2.4"

[dev-dependencies]
# For tests and examples only
env_logger = "0.10"

[[example]]
name = "search_comparison"
path = "examples/search_comparison.rs"

[[example]]
name = "basic_search"
path = "examples/basic_search.rs"

[[example]]
name = "smart_search"
path = "examples/smart_search.rs"